--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
     <div class="footer">
       <!-- <li><a href="versio@gmail.com">email</a></li> -->
       <li><a href="mailto:versio.ge@gmail.com"><img class="email" src="icon/iconfinder___Letter_1904660.png" alt=""></a></li>
+      <li><a href="https://www.facebook.com/profile.php?id=100027104966988"><img class="email" src="icon/iconfinder_social_55_492997.png" alt=""></a></li>
+      <div class="phone">
       <li><a href="versio@gmail.com"><img class="email" src="icon/iconfinder_location_115718.png" alt=""></a></li>
       <div class="phone">
       <img class="phone-img" src="icon/iconfinder_ic_contact_phone_48px_3669371.png" alt="">
