--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <li><a href="#">მთავარი</a></li>
           <li><a href="#">ჩვენს შესახებ</a></li>
           <li><a href="#">ფასები</a></li>
-          <li><a href="#">კონტაქტი</a></li>
+          <li><a href="#contact">კონტაქტი</a></li>
         </ul>
       </nav>
     </header>
@@ -48,7 +48,7 @@
       <p>დემაგოგიის ჩემპიონატი რომ ტარდებოდეს, ბატონ კობახიძეს უბადლო ოქროს მედალი ექნებოდა, - ამის შესახებ პარტია „საქართველოსთვის“ ერთ-ერთმა ლიდერმა, კახა ქემოკლიძემ „პალიტრანიუსის“ გადაცემა „დღის ნიუსრუმში“ განაცხადა, რითაც „ქართლი ოცნების“ თავმჯდომარის, ირაკლი კობახიძის <img class="seal" src="images/seal.jpg" alt="">განცხადებას გამოეხმაურა, რომ პარტიები, რომლებიც სამუშაო ჯგუფებს გაემიჯნნენ, ანტიდასავლური ძალები არიან.</p>
       <p>„კობახიძე თავად, პიროვნულად, განცხადებების დონეზე, მოქმედების დონეზე და ა.შ. თავად არის ტოქსიკურობის მთავარი წყარო. ის არ ცდილობს საზოგადოების გაერთიანებას, მათ შორის სხვადასხვა პოლიტიკური ჯგუფების გაერთიანებას, პირიქით ის ცდილობს, რომ ეს იყოს მაქსიმალურად ფრაგმენტირებული.  რაც საბოლოო ჯამში, აბა, გამოიცანით ვის აძლევს ხელს? - რუსეთს. რუსებს უნდათ, რომ ქართული საზოგადოება, მათ შორის პოლიტიკური ელიტების დონეზე, არ შეიკრას. ოპოზიცია თავის მხრივ შეცდომას უშვებს, მაგრამ ამ შეცდომის მიუხედავად ხელისუფლების პასუხისმგებლობის ზონა არის დაახლოებით 90%-ზე. თუ ხელისუფალი ხარ, შენ რას აკეთებ იმისთვის, რომ ეს ხალხი გარკვეულწილად შემოიყვანო აი,ამ წრეში? - აქ პასუხი არის არაფერს. პირიქით, ხელისუფლება ცდილობს, რომ ეს 90%-იანი პასუხისმგებლობა გარკვეულწილად „გაბლაროს" და ყველაფერი, რასაც თვითონ ვერ აკეთებს კი არა, არ აკეთებს, დააბრალოს დანარჩენებს. დანარჩენების პრობლემა მდგომარეობს იმაში, რომ ხელისუფლებას და ამ შემთხვევაში ბატონ კობახიძისნაირებს აძლევს „არგუმენტის“ საშუალებას, რომ ჩვენ კი შევეცადეთ, მაგრამ იმათ არ მიიღეს“, - განაცხადა კახა ქემოკლიძემ.</p>
     </div>
-    <div class="footer">
+    <div id="contact" class="footer">
       <!-- <li><a href="versio@gmail.com">email</a></li> -->
      <li><a href="mailto:versio.ge@gmail.com"><img class="email" src="icon/iconfinder___Letter_1904660.png" alt=""></a></li>
       <li><a href="versio@gmail.com" target="_blank"><img class="email" src="icon/iconfinder_location_115718.png" alt=""></a></li>
